--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +10,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+p.error {
+  color: #a33;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+label {
+  display: block;
+  width: 20%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+input {
+  width: 70%;
+}
+
+button {
+  width: 30%;
+}
+
+.weather {
+  margin: 0 auto;
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
 }
